exports[`test displays warning for deprecated config options 1`] = `
"[33m[1m[1m● [1mJest Deprecation Warning:[22m

  Option [1mscriptPreprocessor[22m was replaced by [1mtransform[22m, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    [1m\"transform\"[22m: [1m{\".*\": \"test\"}[22m
  }

  Please update your configuration.

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test displays warning for unknown config options 1`] = `
"[33m[1m[1m● [1mJest Validation Warning:[22m

  Unknown option [1munknown[22m with value [1m{}[22m was found.
  This is either a typing error or a user mistake. Fixing it will remove this message.

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test pretty prints valid config for Array 1`] = `
"[31m[1m[1m● [1mJest Validation Error:[22m[39m[37m

  Option [1mcoverageReporters[22m must be of type:
    [32mArray[37m
  but instead received:
    [31mObject[37m

  Example:
  {
    [1m\"coverageReporters\"[22m: [1m[\"json\", \"text\", \"lcov\", \"clover\"][22m
  }[39m[31m

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test pretty prints valid config for Boolean 1`] = `
"[31m[1m[1m● [1mJest Validation Error:[22m[39m[37m

  Option [1mautomock[22m must be of type:
    [32mBoolean[37m
  but instead received:
    [31mArray[37m

  Example:
  {
    [1m\"automock\"[22m: [1mfalse[22m
  }[39m[31m

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test pretty prints valid config for Object 1`] = `
"[31m[1m[1m● [1mJest Validation Error:[22m[39m[37m

  Option [1mhaste[22m must be of type:
    [32mObject[37m
  but instead received:
    [31mNumber[37m

  Example:
  {
    [1m\"haste\"[22m: [1m{\"providesModuleNodeModules\": [\"react\", \"react-native\"]}[22m
  }[39m[31m

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test pretty prints valid config for String 1`] = `
"[31m[1m[1m● [1mJest Validation Error:[22m[39m[37m

  Option [1mpreset[22m must be of type:
    [32mString[37m
  but instead received:
    [31mNumber[37m

  Example:
  {
    [1m\"preset\"[22m: [1m\"react-native\"[22m
  }[39m[31m

  [1mConfiguration documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`test works with custom deprecations 1`] = `
"[33m[1m[1m● [1mMy Custom Deprecation Warning:[22m

  Option [1mscriptPreprocessor[22m was replaced by [1mtransform[22m, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    [1m\"transform\"[22m: [1m{\".*\": \"test\"}[22m
  }

  Please update your configuration.

  custom footer[39m"
`;

exports[`test works with custom errors 1`] = `
"[31m[1m[1m● [1mMy Custom Validation Error:[22m[39m[37m

  Option [1mtest[22m must be of type:
    [32mArray[37m
  but instead received:
    [31mString[37m

  Example:
  {
    [1m\"test\"[22m: [1m[1, 2][22m
  }[39m[31m

  custom footer[39m"
`;

exports[`test works with custom warnings 1`] = `
"[33m[1m[1m● [1mMy Custom Validation Warning:[22m

  Unknown option [1munknown[22m with value [1m\"string\"[22m was found.
  This is either a typing error or a user mistake. Fixing it will remove this message.

  custom footer[39m"
`;
